[tool.poetry]
name = "hn-book-extract"
version = "0.1.0"
description = ""
authors = ["None"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
ipython = "^8.13.0"
langchain = "^0.0.152"
openai = "^0.27.5"
requests = "^2.29.0"
tiktoken = "^0.3.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120